# spinespy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  build_dmg.sh  menubar_app.py  pyproject.toml  requirements.txt  run.sh  test_phone_detection.py  test_posture_live.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
context/: decisions.md
spinespy/: __init__.py  cli.py
tests/: conftest.py  test_posture.py  test_snapshot.py
