[tool.poetry]
name = "spinespy"
version = "0.1.0"
description = "AI-powered posture & focus monitor for macOS menubar"
authors = ["jananadiw"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0"
mediapipe = "^0.10.0"
ultralytics = "^8.0.0"
rumps = "^0.4.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
